# HarborX

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  bench_upd_sweep.csv  pyproject.toml  report_windows.md  requirements.txt
.github/workflows/: harborx-bench.yml  pages.yml
apps/web/: README.md  app.js  build_manifest.py  convert_parquet_to_arrow.py  index.html  serve.py  styles.css  wallets.html  wallets.js
apps/web/data/: 1456cfb63a334a39a06df3ee120daafb-0.arrow  7721bc175b1a4194a04f2779536f0d15-0.arrow
apps/web/data/fixed/: 2bb64d90458245e990c29acd605dadce-0.arrow  manifest.json
bench/: blob_to_arrow_many.py  blob_to_sqlite.py  blobs_to_sqlite_many.py  compact_arrow.py  gen_blob.py  make_demo_data.py  report.py  report_unix.sh  report_win.bat  sql_server.py
harborx/: add.py  blobscan.py  cli.py  rollup.py  sn_pydecoder.py  tools.py
harborx/tools/: serve.py
legacy/ingestor/harborx_ingestor/: __init__.py  cli.py  decoder.py  ingest.py
scripts/: arrow_to_parquet.py  bench_e2e.py  bench_upd_sweep.py  bench_update.py  bench_updates_par.py  bench_win_sweep.bat  blob_to_arrow.py  blob_to_arrow_many.py  blob_to_sqlite.py  blobs_to_sqlite_many.py  cli.py  compact_sqlite.py  demo_unix.sh  demo_win.bat  gen_blob.py  make_demo_data.py  query_arrow.py  report_win.bat  report_windows.py  setup_unix.sh  setup_win.bat  sql_server.py
tests/: test_decode.py  test_query.py  test_write.py
tools/: ingest_decoded_json.py
web/: index.html
web/demo/: manifest.json
web/demo/parquet/: blob_000001.parquet  blob_000002.parquet  blob_000004.parquet
(+25 files in other folders)
